# fastapi-demo

./: README.md  movies.db  pyproject.toml
fastapi_demo/: load_database.py  main.py  models.py  movie.py
